--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "minimal-http-responder"
-version = "0.1.1-alpha.0"
+version = "0.1.1"
 authors = ["Robert Ying <rbtying@aeturnalus.com>"]
 edition = "2018"
 description = "A minimal HTTP responder"
