--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -30,6 +30,11 @@ jobs:
           # list of Docker images to use as base name for tags
           images: |
             ghcr.io/rbtying/minimal-http-responder
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+        with:
+          image: tonistiigi/binfmt:latest
+          platforms: arm64,arm
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Cache Docker Layers
