--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Robert Ying <rbtying@aeturnalus.com>"]
 edition = "2018"
 description = "A minimal HTTP responder"
 license = "MIT"
+repository = "https://github.com/rbtying/minimal-http-responder/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
